--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <div class="hero-content">
 
-          <h2 class="h2 hero-title">Full Stack <br> Web Developer</h2>
+          <h2 class="h2 hero-title">Jr Full Stack <br> Web Developer</h2>
 
           <a href="#contact" class="btn btn-primary">Get in touch</a>
 
@@ -203,7 +203,7 @@
               </div>
 
               <h2 class="h2 card-title">
-                Nessuno <strong>Happy Clients</strong>
+                Amo <strong>la programmazione</strong>
               </h2>
 
               <ion-icon name="chevron-forward-outline"></ion-icon>
@@ -233,7 +233,8 @@
 
           <p class="section-subtitle">About me</p>
 
-          <h2 class="h3 section-title">Hai bisogno di un prodotto creativo? Ti posso aiutare!</h2>
+          <!-- <h2 class="h3 section-title">Hai bisogno di un prodotto creativo? Ti posso aiutare!</h2> -->
+          <h2 class="h3 section-title">JR WEV DEVELOPER!</h2>
 
           <p class="section-text">
             CIAO! Mi chiamo Simona Caruso e sono una sviluppatrice con la passione per la creazione di applicazioni Web applications e intuitive
@@ -245,7 +246,7 @@
           <div class="btn-group">
             <button class="btn btn-secondary">Hire me</button>
 
-            <button class="btn btn-primary">Download cv</button>
+            <button class="btn btn-primary"><a href="https://www.canva.com/design/DAFwfie_DIM/Vo6EZIZI37YyiiAeX6B8VA/view?utm_content=DAFwfie_DIM&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">DOWNLOAD CV</a></button>
           </div>
 
         </div>
