Edit file readme and images

--- a/index.html
+++ b/index.html
@@ -467,9 +467,8 @@
               <h2 class="h3 section-title">Guarda i miei lavori</h2>
 
               <p class="section-text">
-                Sviluppo siti Web della migliore qualità , a lungo termine. Ben documentato, pulito, semplice e
-                con un interfaccia elegante
-                aiuto tutti i clienti non tecnici.
+                Questi sono alcuni dei lavori che ho realizzato durante un corso intensivo di 700 ore con l'accademia Boolean , 
+                ne sono molto orgogliosa. Mi chiedo cosa riuscirò a fare , lavorando ogni giorno sulle mie conoscenze e apprendendone di nuove.
               </p>
 
             </div>
