--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           <div class="btn-group">
             <button class="btn btn-secondary">Hire me</button>
 
-            <button class="btn btn-primary"><a href="https://www.canva.com/design/DAFwfie_DIM/Vo6EZIZI37YyiiAeX6B8VA/view?utm_content=DAFwfie_DIM&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">DOWNLOAD CV</a></button>
+            <button class="btn btn-primary"><a href="https://www.canva.com/design/DAFwfie_DIM/Vo6EZIZI37YyiiAeX6B8VA/view?utm_content=DAFwfie_DIM&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank">DOWNLOAD CV</a></button>
           </div>
 
         </div>
